--- a/page-principal.css
+++ b/page-principal.css
@@ -310,3 +310,55 @@ ul li {
   height : 200px;
   display : flex;
 }
+
+
+.wrapper {
+  display: inline-flex
+}
+
+.wrapper .icon {
+  margin : 0 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  position: relative;
+  z-index: 2;
+
+}
+
+.wrapper .icon span{
+  height: 60px;
+  width : 60px;
+  display : block;
+  background : #fff;
+  text-align: center;
+  border-radius: 50%;
+  box-shadow : 0 10px 10px rgba(0,0,0,0.1);
+}
+
+.wrapper .icon span i {
+  font-size: 25px;
+  line-height:60px;
+}
+
+.wrapper .icon .tooltip{
+  position: absolute;
+  top: -70px;
+  background : #fff;
+  font-size: 20px;
+  padding : 10px 18px;
+  border-radius: 25px;
+  box-shadow: 0 10px 10px rgba(0,0,0,0.1);
+}
+
+.wrapper .icon .tooltip:before{
+position :absolute;
+content : "";
+height: 15px;
+width: 15px;
+background: red;
+bottom: -8px;
+left: 50%;
+transform: translate(-50%);
+}
