--- a/page-principal.css
+++ b/page-principal.css
@@ -324,6 +324,8 @@ ul li {
 
 .wrapper {
   display: inline-flex;
+  text-decoration: none;
+  color: inherit;
   
 }
 
@@ -336,6 +338,7 @@ ul li {
   flex-direction: column;
   position: relative;
   z-index: 2;
+
 
 }
 
