--- a/page-principal.css
+++ b/page-principal.css
@@ -64,7 +64,6 @@ html{
 .topnav a {
   float: left;
   display: block;
-  /*color: #f2f2f2;*/
   color: rgba(230, 230, 230, 1);
   text-align: center;
   padding: 14px 16px;
@@ -384,4 +383,116 @@ background: #fff;
 bottom: -8px;
 left: 50%;
 transform: translate(-50%) rotate(45deg);
+}
+
+.cv{
+height : 50px;
+width : 100px;
+text-align : center;
+background-color : white;
+
+
+}
+
+.main-leftcolumn{
+
+  width: 600px;
+  display : block;
+  float : left;
+}
+
+.main-rightcolumn{
+
+  width : 400px;
+  float : right;
+  color : white;
+
+}
+
+h3{
+  
+  font-family: calibri light;
+  color: white;
+}
+
+h4{
+
+  font-size:10px
+}
+.progressbar{
+
+  background-color: #333;
+  height: 10px;
+  border-radius : 20px;
+}
+
+.windows{
+
+  background-color: #ddd;
+  height: 10px;
+  width: 300px;
+  border-radius: 20px;
+}
+
+.htmlcssprog{
+
+  background-color: #ddd;
+  height: 10px;
+  width: 380px;
+  border-radius: 20px;
+}
+
+.powershell{
+
+  background-color: #ddd;
+  height: 10px;
+  width: 200px;
+  border-radius: 20px;
+}
+
+.python{
+
+  background-color: #ddd;
+  height: 10px;
+  width: 350px;
+  border-radius: 20px;
+}
+
+.SQL{
+
+  background-color: #ddd;
+  height: 10px;
+  width: 350px;
+  border-radius: 20px;
+}
+
+.c{
+
+  background-color: #ddd;
+  height: 10px;
+  width: 200px;
+  border-radius: 20px;
+}
+
+.cvbox{
+  background-color: #333;
+  border-radius: 20px;
+}
+
+.cvbox a{
+
+  display: block;
+  color: rgba(230, 230, 230, 1);
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  border-radius: 20px;
+}
+
+.cvbox a:hover {
+  background-color: #ddd;
+  color: black;
+  border-radius: 20px;
+  transition: 0.5s;
+
 }
